--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
               </li>
               <li class="nav-item sub-nav-item">
                 <a class="link" href="#">Women</a>
+
+                <ul class="sub-nav-list">
+                  <li class="nav-item sub-nav-item-women">
+                    <a class="link" href="#">Dress</a>
+                  </li>
+                  <li class="nav-item sub-nav-item-women">
+                    <a class="link" href="#">Pants</a>
+                  </li>
+                  <li class="nav-item sub-nav-item-women">
+                    <a class="link" href="#">Shoes</a>
+                  </li>
+                </ul>
+  
+
               </li>
               <li class="nav-item sub-nav-item">
                 <a class="link" href="#">Kids</a>
